--- a/4.Large_scale.tex
+++ b/4.Large_scale.tex
@@ -16,14 +16,14 @@ There are two NovaCor processors available at TU Delft and they are equipped wit
 
 
 \section{Defining the layout for the 2 GW Offshore Network}
-The initial aspect that needs to be considered for a 2 GW system is the topology of the network. The popularity of \gls{MMC} due to its improved controllability and superior system performances has led way for the increasing demand for \gls{MMC}-\gls{HVDC} transmission for integration of long distance \gls{OWF}s. For the connection of new \gls{OWF}s in the vicinity of the already existing ones, parallel operation of \gls{MMC}-\gls{HVDC} transmission systems can be expected in the near future with multiple connections to the onshore system. Such type of schemes increase the interest in hybrid systems with the "hub-and-spoke" principle proposed by ABB \cite{abb_hvdc_2018} and represented in Figure \ref{fig:ABB_Hub_Spoke_3}. The layout in Figure \ref{fig:ABB_Hub_Spoke_3}a) depicts the connection of \gls{OWF}s to a offshore \gls{MMC} station which in turn transfers power to the onshore system through multi-terminal \gls{HVDC} connections. However, in such a layout, the idea of scaling of offshore wind power is limited to the installed capacity of the \gls{MMC} unit. Another layout involves the \gls{OWF}s connected through \gls{AC} links to a back-to-back \gls{HVDC} converter station as shown in Figure \ref{fig:ABB_Hub_Spoke_3}b). Long distance \gls{HVAC} transmission is required in this case, for the transfer of power from \gls{OWF}s to the onshore network and hence contribute to high losses in the network when compared to \gls{HVDC} transmission for larger distances. Figure \ref{fig:ABB_Hub_Spoke_3}c) represents the connection of multiple \gls{OWF}s to the offshore converter station, and power is transferred to the onshore system through multiple \gls{HVDC} links. Such a layout provides contingency in the network by supplying offshore wind power to at least one onshore system if one of the \gls{HVDC} links gets disconnected \cite{lescale2012parallelling}. A stage-wise construction of such a \gls{HVDC} project is easier to be achieved by the developers as well \cite{irnawan2019planning}.
+The initial aspect that needs to be considered for a 2 GW network is the topology of the network. The popularity of \gls{MMC} due to its improved controllability and superior system performances has led way for the increasing demand for \gls{MMC}-\gls{HVDC} transmission for integration of long distance \gls{OWF}s. For the connection of new \gls{OWF}s in the vicinity of the already existing ones, parallel operation of \gls{MMC}-\gls{HVDC} transmission systems can be expected in the near future with multiple connections to the onshore system. Such type of schemes increase the interest in hybrid systems with the "hub-and-spoke" principle proposed by ABB \cite{abb_hvdc_2018} and represented in Figure \ref{fig:ABB_Hub_Spoke_3}. The layout in Figure \ref{fig:ABB_Hub_Spoke_3}a) depicts the connection of \gls{OWF}s to a offshore \gls{MMC} station which in turn transfers power to the onshore system through multi-terminal \gls{HVDC} connections. However, in such a layout, the idea of scaling of offshore wind power is limited to the installed capacity of the \gls{MMC} unit. Another layout involves the \gls{OWF}s connected through \gls{AC} links to a back-to-back \gls{HVDC} converter station as shown in Figure \ref{fig:ABB_Hub_Spoke_3}b). Long distance \gls{HVAC} transmission is required in this case, for the transfer of power from \gls{OWF}s to the onshore network and hence contribute to high losses in the network when compared to \gls{HVDC} transmission for larger distances. Figure \ref{fig:ABB_Hub_Spoke_3}c) represents the connection of multiple \gls{OWF}s to the offshore converter station, and power is transferred to the onshore system through multiple \gls{HVDC} links. Such a layout provides contingency in the network by supplying offshore wind power to at least one onshore system if one of the \gls{HVDC} links gets disconnected \cite{lescale2012parallelling}. A stage-wise construction of such a \gls{HVDC} project is easier to be achieved by the developers as well \cite{irnawan2019planning}.
 
-The idea in this chapter is to expand the single \gls{OWF} model network in Figure \ref{fig:WT1_Model_RSCAD} for a 2 GW offshore wind power. This could be made possible by connecting four such \gls{OWF} models in parallel with each generating 500 MW of power. The reason for choosing four \gls{OWF}s is to have a symmetrical layout and to test the ability of RSCAD to perform simulations of such a configuration. Correspondingly, a 2 GW offshore converter station capacity is required to transfer this generated amount of power to the onshore system. However, currently deployed (state-of-the-art) \gls{MMC}-\gls{HVDC} transmission, has a maximum rated capacity of 1.2 GW \cite{cigre2005b4}. Hence, with the available technology, two \gls{MMC} offshore stations of 1 GW each will be required for 2 GW power transmission. Taking the aforementioned factors into account, a layout similar to the Figure \ref{fig:ABB_Hub_Spoke_3}c) is developed for this work. 
+A specific configuration for a 2 GW offshore network is currently non-existent and this chapter tries to fill in such a research gap. The idea in this chapter is to expand the single \gls{OWF} model network in Figure \ref{fig:WT1_Model_RSCAD} for a 2 GW offshore wind power network. This could be made possible by connecting four such \gls{OWF} models in parallel with each generating 500 MW of power. The reason for choosing four \gls{OWF}s is to have a symmetrical layout and to test the ability of RSCAD to perform simulations of such a configuration. Correspondingly, a 2 GW offshore converter station capacity is required to transfer this generated amount of power to the onshore system. However, currently deployed (state-of-the-art) \gls{MMC}-\gls{HVDC} transmission, has a maximum rated capacity of 1.2 GW \cite{cigre2005b4}. Hence, with the available technology, two \gls{MMC} offshore stations of 1 GW each will be required for 2 GW power transmission. Taking the aforementioned factors into account, a layout similar to the Figure \ref{fig:ABB_Hub_Spoke_3}c) is developed for this work. 
 
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 11cm,width = \textwidth]{Diagrams/Chapter_4/ABB_Hub_Spoke_3.png}
+    \includegraphics[height = 12cm,width = \textwidth]{Diagrams/Chapter_4/ABB_Hub_Spoke_3.png}
     \caption{a) Hub-and-spoke with multi-terminal HVDC system, b) Hub-and-spoke with AC links and HVDC back-to-back station and c) Hub-and-spoke with multiple HVDC links \cite{abb_hvdc_2018}}
     \label{fig:ABB_Hub_Spoke_3}
 \end{figure}
@@ -332,7 +332,7 @@ The inner loop consists of \gls{PI} controllers for d and q axis separately and 
 
 \end{figure}
 
-As the \gls{DC} voltage in the \gls{HVDC} link is maintained and controlled by the onshore equivalent \gls{MMC} station represented by a constant \gls{DC} source, the active power control is chosen as priority chosen for d-axis for \gls{MMC}-2 control. Similarly, as the \gls{AC} voltage is controlled by the V/F control mode in \gls{MMC}-1, reactive power control is chosen as priority chosen for q-axis for \gls{MMC}-2. When active power is the chosen priority, $P_{AC\_2}$ represents the required amount of active power that flows through offshore \gls{MMC} station-2 and must be defined externally by the user. The power flow in \gls{MMC}-2 is detailed in Appendix [].  
+As the \gls{DC} voltage in the \gls{HVDC} link is maintained and controlled by the onshore equivalent \gls{MMC} station represented by a constant \gls{DC} source, the active power control is chosen as priority for d-axis for \gls{MMC}-2 control. Similarly, as the \gls{AC} voltage is controlled by the V/F control mode in \gls{MMC}-1, reactive power control is chosen as priority chosen for q-axis for \gls{MMC}-2. When active power is the chosen priority, $P_{AC\_2}$ represents the required amount of active power that flows through offshore \gls{MMC} station-2 and must be defined externally by the user. However, the outer loop control available for non-islanded mode in \cite{vrana2013cigre} is not suitable for parallel operation with V/F control strategy. Hence, the outer loop is simplified and the reference points ($i_{d\_ref\_2}$ and $i_{q\_ref\_2}$) for the inner loop are provided externally by the user. The modification in outer loop and the power flow control in \gls{MMC}-2 is detailed in Appendix \ref{modific_outer_loop}.  
 
 
 The inner control loop consists of \gls{PI} controllers that play the major role in ensuring minimum steady state error. The inner control also contain the feed-forward term to compensate the cross coupling terms. The mathematical equations for the parameters of inner control loop is derived as provided in \cite{saad2015modelisation}. Applying Kirchoff's Voltage Law in Figure \ref{fig:MMC_pow_system_1} and with the \gls{MMC} representation in Figure \ref{fig:MMC_pow_system_2}, the equations are derived for a typical \gls{MMC} station connected to the \gls{AC} network. The assumptions involve, the direction of current is from the \gls{AC} network to the \gls{MMC} (similar to the condition when offshore wind power is transferred from offshore to onshore system) and avoiding the star point reactor:
