--- a/6.Conclusions_and_future_scope.tex
+++ b/6.Conclusions_and_future_scope.tex
@@ -8,14 +8,14 @@ The compelling need to move towards \gls{RES} and the technical challenges faced
 The effective method to accomplish the targets set for several European and other countries towards energy transition is to further the usage of large scale offshore wind energy. In this thesis, a large scale offshore network with \gls{DVC} in \gls{WG}s is developed as detailed in Chapter \ref{4}. This is done by modelling a 2 GW offshore network with four sets of \gls{WG}s (with \gls{DVC}s) connected to two \gls{MMC}s using \gls{HVAC} cables through a modular approach in RSCAD. Each \gls{WG} can be scaled up to have a maximum rating of 500 MW. The model also avoids the usage of a offshore collector platofrm by using 66 kV \gls{HVAC} transmission. The chosen topology for the network and the representation of subsystems using Tline modules in RSCAD is represented. The V/F control mode available in \cite{wachal2014guide} is developed for \gls{MMC}-1 suitable for a 66 kV network and the outer loop control of \gls{MMC}-2 is modified to be suitable for a 66 kV network. The work around to use an extra interface transformer in \gls{MMC}-2 bus due to the unavailability of 66 kV control structure for \gls{MMC} in RSCAD is explained. 
 
 
-The operation of the 2 GW model is detailed in Chapter \ref{5}. The sychronization of \gls{MMC}s, energization procedure of \gls{HVAC} cables and \gls{WG}s in real time environment are described. To achieve the overall goal defined in Chapter \ref{1}, the 2 GW test network is subjected to perturbations such as sudden disconnection of 1 set of \gls{WG} and three-phase fault in the middle of an \gls{HVAC} cable for dynamic analysis. A logic is developed in RSCAD for the operation of circuit breaker at the \gls{HVAC} cable end. The performance of \gls{DVC} to work in islanding operation is depicted by the operation of the circuit breaker. The \gls{DVC} implemented in \gls{GSC} executes reactive current injection by \gls{WG} during islanding operation in a large scale network which is also a significant requirement for Class 3 type converters. A modular 2 GW model with an enhanced control strategy (\gls{DVC}) implemented in \gls{WG}, working in coordination with two \gls{MMC}s with different control strategies is successfully developed for \gls{EMT} simulations in the real-time environment.   
+The operation of the 2 GW model is detailed in Chapter \ref{5}. The sychronization of \gls{MMC}s, energization procedure of \gls{HVAC} cables and \gls{WG}s in real time environment are described. To achieve the overall goal defined in Chapter \ref{1}, the 2 GW test network is subjected to perturbations such as sudden disconnection of 1 set of \gls{WG} and three-phase fault in the middle of an \gls{HVAC} cable for dynamic analysis. A logic is developed in RSCAD for the operation of circuit breaker at the \gls{HVAC} cable end. The performance of \gls{DVC} to work in islanding operation is depicted by the operation of the circuit breaker. The \gls{DVC} implemented in \gls{GSC} executes reactive current injection by \gls{WG} during islanding operation in a large scale network which is also a significant requirement for Class 3 type converters. A modular 2 GW model with an control strategy (\gls{DVC}) implemented in \gls{WG}, working in coordination with two \gls{MMC}s with different control strategies is successfully developed for \gls{EMT} simulations in the real-time environment.   
 
 
 \section{Answers to Research Questions}
 \vspace{2mm}
 \paragraph{\textcolor{blue}{Research Question 1 : How effective is the \gls{DVC} when implemented in an \gls{EMT} average model of Type-4 \gls{WG} connected to a 66 kV equivalent \gls{HVAC} system in RSCAD?}}
 
-\paragraph{} The modelling of \gls{DVC} in \gls{GSC} of Type-4 \gls{WG} connected to an infinite grid through 66 kV \gls{HVAC} cables in RSCAD is explained in Chapter \ref{3}. The performance of the implemented \gls{DVC} is tested for severe disturbances in the grid. The event three-phase line to ground short circuit in the middle of the \gls{HVAC} cable is chosen for analysis. The \gls{DVC} provides voltage control and effectively stabilizes the system during such severe disturbances when connected to a 66 kV infinite grid. In terms of reactive current injection during a three-phase line to ground fault in the middle of the cable, the \gls{DVC} shows the required performance by providing active current priority during steady state conditions and reactive current priority during dynamic conditions. Such an enhanced strategy provides control of voltage directly (when compared to indirect control of voltage in conventional current control) and avoids the need of an external control to be acted upon during dynamic conditions such as an FRT controller. 
+\paragraph{} The modelling of \gls{DVC} in \gls{GSC} of Type-4 \gls{WG} connected to an infinite grid through 66 kV \gls{HVAC} cables in RSCAD is explained in Chapter \ref{3}. The performance of the implemented \gls{DVC} is tested for severe disturbances in the grid. The event three-phase line to ground short circuit in the middle of the \gls{HVAC} cable is chosen for analysis. The \gls{DVC} provides voltage control and effectively stabilizes the system during such severe disturbances when connected to a 66 kV infinite grid. In terms of reactive current injection during a three-phase line to ground fault in the middle of the cable, the \gls{DVC} shows the required performance by providing active current priority during steady state conditions and reactive current priority during dynamic conditions. Such a strategy provides control of voltage directly (when compared to indirect control of voltage in conventional current control) and avoids the need of an external control to be acted upon during dynamic conditions such as an FRT controller. 
 
 \paragraph{\textcolor{blue}{Research Question 2 : What insights can be attained by the \gls{EMT} average model of Type-4 \gls{WG} with \gls{DVC} in 66 kV network in RSCAD in comparison with a similar system modelled with a simplified Type-4 \gls{WG} configuration with \gls{DVC} in DIgSILENT PowerFactory?}}
 
