--- a/Appendix-b.tex
+++ b/Appendix-b.tex
@@ -1,16 +1,16 @@
-\chapter{Network representation in RSCAD and PowerFactory}
+\chapter{66 kV Network Representation in RSCAD and PowerFactory}
 
-\section{Draft module representation in RSCAD}
+\section{Single OWF 66 kV network, Draft module in RSCAD}
 
 \begin{figure}[H]
 \centering
 %\hspace*{-0.2cm}
-    \includegraphics[height = 6cm,width = 17.5cm]{Diagrams/Appendix_B/WT1_AC_RSCAD_network_view.pdf}
+    \includegraphics[height = 6cm,width = \textwidth]{Diagrams/Appendix_B/WT1_AC_RSCAD_network_view.pdf}
     \caption{66 kV HVAC test system representation in Draft module in RSCAD}
     \label{fig:WT1_AC_RSCAD_network_view}
 \end{figure}
 
-\section{Runtime module representation in RSCAD}
+\section{Single OWF 66 kV network, Runtime module in RSCAD}
 \begin{figure}[H]
 \centering
 %\hspace*{-0.2cm}
@@ -19,7 +19,7 @@
     \label{fig:WT1_AC_RSCAD_network_sib_view}
 \end{figure}
 
-\section{Grid overview in PowerFactory}
+\section{Single OWF 66 kV network in PowerFactory}
 \begin{figure}[H]
 \centering
 %\hspace*{-0.2cm}
@@ -28,5 +28,3 @@
     \label{fig:WT1_AC_PFD_network_view}
 \end{figure}
 
-
-\section{Fault logic in RSCAD}\label{fault_logic}
