--- a/report.bib
+++ b/report.bib
@@ -105,9 +105,12 @@ The simulator-Hardware,
   year={2019}
 }
 
-@article {duckwitz_operating_behavior,
-  title = {Operational Behavior of the Virtual Synchronous Machine},
-  author = {Duckwitz, Daniel and Welck, Friedrich and Gl{\"o}ckler, Christoph}
+@article{duckwitz_operating_behavior,
+  title={Operational behavior of the virtual synchronous machine},
+  author={Duckwitz, Daniel and Welck, Friedrich and Gl{\"o}ckler, Christoph},
+  journal={Fachtagung Netzregelung und Systemf{\"u}hrung},
+  year={2017},
+  publisher={VDE Verlag}
 }
 
 @book{manwell2010wind,
