--- a/report.tex
+++ b/report.tex
@@ -111,6 +111,8 @@
 \newglossaryentry{PWM}{name={PWM}, description={Pulse Width Modulation}}
 \newglossaryentry{HV}{name={HV}, description={High Voltage}}
 \newglossaryentry{LV}{name={LV}, description={Low Voltage}}
+\newglossaryentry{dq}{name={dq}, description={Direct Quadrature}}
+
 \glstoctrue
 
 
@@ -124,11 +126,11 @@
 \frontmatter
 
 \title{Development of a Generic Model for Real-time Simulation and Assessment of the Dynamic Performance of a Large Scale Offshore Transmission Network}
-
+%\coverimage{cover.jpg}
 
 \author{Saran Ganesh}
 %\affiliation{Technische Universiteit Delft}
-\includepdf{cover/Saran_cover_diff_color_newmargin.pdf}
+\includepdf{Saran_cover_diff_color_newmargin.pdf}
 %\makecover
 
 %% Include an optional title page.
@@ -137,6 +139,7 @@
 \input{preface}
 
 \tableofcontents
+
 
 
 \listoffigures
@@ -150,18 +153,18 @@
 
 \mainmatter
 
-\input{1. Introduction}
-\input{2. Scientific Background}
-\input{3.Implementation of Direct Voltage Control for 66 kV network}
-\input{4.Large scale}
-\input{5.Operation of the large scale OWF network}
-\input{6. Conclusions and Future Scope}
+\input{1.Introduction}
+\input{2.Scientific_Background}
+\input{3.Implementation_of_DVC}
+\input{4.Large_scale}
+\input{5.Operation_of_2GW}
+\input{6.Conclusions_and_future_scope}
 
 \begin{appendices}
 \input{Appendix-a}
-\input{appendix-b}
-\input{appendix-c}
-%\input{appendix-d}
+\input{Appendix-b}
+\input{Appendix-c}
+\input{Appendix-d}
 \end{appendices}
 %\bibliographystyle{ieeetran}
 %% Use letters for the chapter numbers of the appendices.
