--- a/references_3.bib
+++ b/references_3.bib
@@ -1,4 +1,11 @@
 
+@misc{erlich_description_nodate,
+	title = {Description, {Modelling} and {Simulation} of a {Benchmark} {System} for {Converter} {Dominated} {Grdis} ({Part} {I})},
+	url = {https://www.digsilent.de/en/faq-reader-powerfactory/do-you-have-an-example-of-a-fault-tolerant-power-system-with-98-share-of-renewables.html},
+	urldate = {2020-10-06},
+	author = {Erlich, I. and Korai, A.}
+}
+
 @misc{noauthor_mmc_nodate,
 	title = {{MMC} {Modeling}},
 	url = {http://knowledge.rtds.com/hc/en-us/articles/360039628773},
@@ -1056,7 +1063,6 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	year = {2017},
 	pages = {843}
 }
-
 @incollection{chen_overview_2013,
 	title = {An overview of power electronic converter technology for renewable energy systems},
 	isbn = {978-1-84569-783-9},
@@ -1071,7 +1077,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	pages = {80--105}
 }
 
-@incollection{noauthor_appendix_2014-1,
+@incollection{noauthor_appendix_2014,
 	title = {Appendix {A}: {Voltage} {Source} {Converter} {Topologies}},
 	isbn = {978-1-118-70163-8},
 	shorttitle = {Appendix {A}},
@@ -1086,6 +1092,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	keywords = {MMC converters, PWM, VSC},
 	pages = {223--269}
 }
+
 @inproceedings{torres_comparison_2018,
 	address = {Concepcion},
 	title = {Comparison {Between} {Voltage} {Droop} and {Voltage} {Margin} {Controllers} for {MTDC} {Systems}},
@@ -1656,13 +1663,13 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	url = {https://search.abb.com/library/Download.aspx?DocumentID=9AKK106103A8195&LanguageCode=en&DocumentPartId=&Action=Launch},
 	urldate = {2020-08-29}
 }
-
 @misc{noauthor_tennet_2020,
 	title = {{TenneT} develops first {2GW} offshore grid connection with suppliers},
 	url = {https://www.tennet.eu/news/detail/tennet-develops-first-2gw-offshore-grid-connection-with-suppliers/},
 	month = feb,
 	year = {2020}
 }
+
 @book{ali_wind_2012,
 	address = {Boca Raton, FL},
 	title = {Wind energy systems: {Solutions} for power quality and stabilization.},
